# Chess-Engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  fly.toml  run.sh
engine/: board.cpp  board.h  eval.cpp  eval.h  movegen.cpp  movegen.h  search.cpp  search.h  types.h
net/: http.cpp  http.h  server.cpp  sha1.cpp  sha1.h  ws.cpp  ws.h
public/: app.js  index.html  style.css
tests/: fuzz_ws.cpp  perft.cpp  regression.cpp  test_search.cpp  test_ws.cpp
tools/: bench.py
